[package]
name = "learning_rust"
version = "0.1.0"
authors = ["Piotr Trybowski <piotr.trybowski@boombit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.34.5", features = ["bundled", "static-link"]}
gl = { path = "lib/gl" }

[build-dependencies]
walkdir = "2.3.2"