[package]
name = "gl"
version = "0.1.0"
authors = ["Piotr Trybowski <piotr.trybowski@boombit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
gl_generator = "0.9"
gl_generator_profiling_struct = "0.1.2"
[features]
debug = []